--- a/index.html
+++ b/index.html
@@ -37,18 +37,43 @@
         <section id="hero">
             <div id="hero-content">
                 <h1>Quench Juice and Fast Food </h1>
-                <p>Cold, clean, healthy and refreshing</p>
+                <p>Natural, cold, clean, healthy and refreshing</p>
                 <a href="/food.html">Place your order now</a>   
             </div>
             
         </section>
         <section id="highlight">
-
+            <h2>Our offers</h2>
+            <ul id="services">
+                <li class="services">
+                    <img src="/images/food/breakfast.PNG" alt="breakfast meals">
+                    <p>Breakfast offers</p>
+                </li>
+                <li class="services">
+                    <img src="/images/food/main meals.PNG" alt="main meals images">
+                    <p>Main meal offers</p>
+                </li>
+                <li class="services">
+                    <img src="/images/food/drinks.PNG" alt="drinks images">
+                    <p>Drinks offers</p>
+                </li>
+            </ul>
         </section>
     </main>
 
     <footer>
-
+        <ul>
+            <li>
+                <a href="/"><img src="/images/icons/facebook.png" alt="facebook link">
+                </a>
+            </li>
+            <li>
+                <a href="/"><img src="/images/icons/insta.png" alt="instagram link"></a>
+            </li>
+            <li>
+                <a href="/"><img src="/images/icons/whatsapp ico.PNG" alt="Whats app link"></a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
