service page added and styled part1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <!-- Create the pages now but we are going to work on them later -->
             <ul>
                 <li><a href="/about.html">About</a></li>
+                <li><a href="/services.html">Services</a></li>
                 <li><a href="/food.html">Food</a></li>
                 <li><a href="/drinks.html">Drinks</a></li>
             </ul>
@@ -38,7 +39,7 @@
             <div id="hero-content">
                 <h1>Quench Juice and Fast Food </h1>
                 <p>Natural, cold, clean, healthy and refreshing</p>
-                <a href="/food.html">Place your order now</a>   
+                <a href="/services.html">Place your order now</a>   
             </div>
             
         </section>
