Added delicious to hero content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="hero">
             <div id="hero-content">
                 <h1>Quench Juice and Fast Food </h1>
-                <p>Natural, cold, clean, healthy and refreshing</p>
+                <p>Natural, cold, clean, healthy, delicious and refreshing</p>
                 <a href="/services.html">Place your order now</a>   
             </div>
             
