--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
-    rel="stylesheet"/>
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="styles.css">
     <title>Quench Juice and Fast Food</title>
 </head>
+
 <body>
     <header>
         <!-- To make a a block element, put it in a div -->
@@ -28,6 +30,7 @@
             <ul>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/services.html">Services</a></li>
+                <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/food.html">Food</a></li>
                 <li><a href="/drinks.html">Drinks</a></li>
             </ul>
@@ -39,24 +42,30 @@
             <div id="hero-content">
                 <h1>Quench Juice and Fast Food </h1>
                 <p>Natural, cold, clean, healthy, delicious and refreshing</p>
-                <a href="/services.html">Place your order now</a>   
+                <a href="/services.html">Place your order now</a>
             </div>
-            
+
         </section>
         <section id="highlight">
             <h2>Our offers</h2>
             <ul id="services">
                 <li class="services">
-                    <img src="/images/food/breakfast.PNG" alt="breakfast meals">
-                    <p>Breakfast offers</p>
+                    <a href="/services.html">
+                        <img src="/images/food/breakfast.PNG" alt="breakfast meals">
+                        <p>Breakfast offers</p>
+                    </a>
                 </li>
                 <li class="services">
-                    <img src="/images/food/main meals.PNG" alt="main meals images">
-                    <p>Main meal offers</p>
+                    <a href="/services.html">
+                        <img src="/images/food/main meals.PNG" alt="main meals images">
+                        <p>Main meal offers</p>
+                    </a>
                 </li>
                 <li class="services">
-                    <img src="/images/food/drinks.PNG" alt="drinks images">
-                    <p>Drinks offers</p>
+                    <a href="/services.html">
+                        <img src="/images/food/drinks.PNG" alt="drinks images">
+                        <p>Drinks offers</p>
+                    </a>
                 </li>
             </ul>
         </section>
@@ -77,4 +86,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
