--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
             <ul>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/services.html">Services</a></li>
+                <li><a href="/blog.html">Blog</a></li>
                 <li><a href="/food.html">Food</a></li>
                 <li><a href="/drinks.html">Drinks</a></li>
             </ul>
@@ -34,14 +35,41 @@
                 <div class="service-desc">
                     <div>
                         <h2>Breakfast</h2>
-                        <p>Breakfast is an important meal of the day. The healthier breakfast determines how our day
-                            will be. We ecourage you to take professionally recommended breakfast for persons with
-                            various conditions and ages. Remember also to drink a lot of water to keep health. Your
+                        <p>Breakfast is an important meal of the day. We ecourage you to take professionally recommended breakfast for persons with
+                            various conditions and ages. Your
                             healthy, delicious, clean and convenient meals is our priority.
                         </p>
                     </div>
                     <div class="action">
-                        <a href="/food.html">Explore</a>
+                        <a href="/food.html">Explore &#x2192</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <img src="/images/food/main meals.PNG" alt="main Meals images">
+                <div class="service-desc">
+                    <div>
+                        <h2>Main meals</h2>
+                        <p>Balanced diet is important for all persons. We ecourage you to take professionally recommended balanced diet for persons of all ages. Your
+                            healthy, delicious, clean and convenient meals is our priority.
+                        </p>
+                    </div>
+                    <div class="action">
+                        <a href="/food.html">Explore &#x2192</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <img src="/images/food/drinks.PNG" alt="drinks images">
+                <div class="service-desc">
+                    <div>
+                        <h2>Drinks</h2>
+                        <p>Various fruit juices have various health advantages such as immunity boost and red blood cells. Remember also to drink a lot of water to keep health. Your
+                            healthy, delicious, clean and convenient meals is our priority.
+                        </p>
+                    </div>
+                    <div class="action">
+                        <a href="/food.html">Explore &#x2192</a>
                     </div>
                 </div>
             </li>
